# Swing_Stocks_Notifier

./: .env.example  .gitignore  README.md  backtest.py  backtest_app.py  backtest_yfinance.py  config.py  dashboard.py  dashboard_metrics.py  data_ingestion.py  database.py  fundamental_screener.py  main.py  notifier.py  pyproject.toml  requirements.txt  run_backtest.py  scheduler.py  scratch_analysis_results.csv  screener.py  screener_v1.py  stock_universe.py
.github/workflows/: daily_screener.yml
backtest_results/: backtest_signals_20260626_222154.csv  backtest_signals_20260626_222343.csv  backtest_signals_20260626_224710.csv  backtest_summary_20260626_222154.csv  backtest_summary_20260626_222343.csv  backtest_summary_20260626_224710.csv  backtest_summary_20260626_230202.csv  backtest_summary_20260626_235259.csv
tests/: test_backtest_local.py  test_dashboard.py
