[project]
name = "swing-stocks-notifier"
version = "0.1.0"
description = "First version of automatic stocks screener"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.10.4",
    "duckdb>=1.5.4",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "streamlit>=1.40.0",
    "ta>=0.11.0",
    "twilio>=9.0.0",
    "yfinance>=0.2.40",
]
